// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches <MyWallet transactions={...}> snapshot 1`] = `
<TransactionsListView
  transactions={
    Array [
      Object {
        "from": "0x2",
        "gas": 100,
        "gasPrice": "1000",
        "hash": "0x1",
        "to": "0x3",
        "value": 10,
      },
      Object {
        "from": "0x6",
        "gas": 200,
        "gasPrice": "2000",
        "hash": "0x4",
        "to": "0x5",
        "value": 20,
      },
    ]
  }
>
  <Styled(styled.div)>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-jzJRlG",
            "isStatic": true,
            "lastClassName": "cZhRJb",
            "rules": Array [
              "
          width: 100%;
          border: 1px solid #f0f0f0;
        ",
              "
          overflow-y: auto;
          height: 100%;
        ",
            ],
          },
          "displayName": "Styled(styled.div)",
          "foldedComponentIds": Array [
            "sc-VigVT",
          ],
          "render": [Function],
          "styledComponentId": "sc-jzJRlG",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="sc-VigVT sc-jzJRlG cZhRJb"
      >
        <styled.div
          key="0x1"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-cSHVUG",
                  "isStatic": true,
                  "lastClassName": "fMLWXv",
                  "rules": Array [
                    "
                width: 100%;
                border-bottom: 1px solid #f0f0f0;
                &:last-child {
                  border: 0;
                }
              ",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-cSHVUG",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="sc-cSHVUG fMLWXv"
            >
              <Styled(styled.div)
                expanded={false}
                onClick={[Function]}
              >
                <StyledComponent
                  expanded={false}
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-kAzzGY",
                        "isStatic": false,
                        "lastClassName": "jTPYbN",
                        "rules": Array [
                          "
                      font-size: 1rem;
                      padding: 0.8rem 1rem;
                      border-bottom: 1px solid #f0f0f0;
                      transition: background-color 0.5s ease;
                      color: #444;
                      box-sizing: border-box;
                      background-color: #fff;
                    
                      &:last-child {
                        border: 0;
                      }
                    
                      &:hover {
                        background-color: ",
                          [Function],
                          ";
                        color: ",
                          [Function],
                          ";
                        cursor: ",
                          [Function],
                          ";
                      }
                    ",
                          "
                      padding: 0.8rem 1rem;
                      color: ",
                          [Function],
                          ";
                    
                      .dropdown-arrow {
                        height: 16px;
                        transition: transform 0.3s ease;
                        transform: rotateX(",
                          [Function],
                          "deg);
                      }
                      .expanded-view {
                        ",
                          [Function],
                          "
                        transition: height 0.3s ease, margin 0.3s ease;
                        height: ",
                          [Function],
                          ";
                        background-color: #fff;
                        color: #000;
                        margin: ",
                          [Function],
                          ";
                      }
                      &:hover {
                        cursor: pointer;
                        background-color: #fff;
                      }
                      &:hover .expanded-view {
                        cursor: auto;
                        background-color: #fff;
                        color: #000;
                      }
                    ",
                        ],
                      },
                      "displayName": "Styled(styled.div)",
                      "foldedComponentIds": Array [
                        "sc-jTzLTM",
                      ],
                      "render": [Function],
                      "styledComponentId": "sc-kAzzGY",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  onClick={[Function]}
                >
                  <div
                    className="sc-jTzLTM sc-kAzzGY jTPYbN"
                    onClick={[Function]}
                  >
                    <div>
                      <styled.div
                        className="header"
                      >
                        <StyledComponent
                          className="header"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-bdVaJa",
                                "isStatic": true,
                                "lastClassName": "gzrIrS",
                                "rules": Array [
                                  "
                              display: flex;
                              flex-direction: row;
                              box-sizing: border-box;
                              overflow: auto;
                            ",
                                ],
                              },
                              "displayName": "styled.div",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-bdVaJa",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                        >
                          <div
                            className="header sc-bdVaJa gzrIrS"
                          >
                            <styled.div>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-ifAKCX",
                                      "isStatic": true,
                                      "lastClassName": "hHdAva",
                                      "rules": Array [
                                        "
                                    flex: auto 1 1;
                                  ",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-ifAKCX",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <div
                                  className="sc-ifAKCX hHdAva"
                                >
                                  0x1
                                </div>
                              </StyledComponent>
                            </styled.div>
                            <styled.div>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-EHOje",
                                      "isStatic": true,
                                      "lastClassName": "eRufog",
                                      "rules": Array [
                                        "
                                    flex: auto 0 0;
                                  ",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-EHOje",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <div
                                  className="sc-EHOje eRufog"
                                >
                                  <img
                                    className="dropdown-arrow"
                                  />
                                </div>
                              </StyledComponent>
                            </styled.div>
                          </div>
                        </StyledComponent>
                      </styled.div>
                    </div>
                    <Styled(styled.div)
                      className="expanded-view"
                      onClick={[Function]}
                    >
                      <StyledComponent
                        className="expanded-view"
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-fjdhpX",
                              "isStatic": true,
                              "lastClassName": "eXyvVf",
                              "rules": Array [
                                "
                            width: 100%;
                            border: 1px solid #f0f0f0;
                          ",
                                "
                            overflow-y: auto;
                            max-height: 140px;
                          ",
                              ],
                            },
                            "displayName": "Styled(styled.div)",
                            "foldedComponentIds": Array [
                              "sc-VigVT",
                            ],
                            "render": [Function],
                            "styledComponentId": "sc-fjdhpX",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        onClick={[Function]}
                      >
                        <div
                          className="sc-VigVT expanded-view sc-fjdhpX eXyvVf"
                          onClick={[Function]}
                        >
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Sender
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      0x2
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Receiver
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      0x3
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Ether sent
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      10
                                       Ether
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Gas Used
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      100
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Gas Price
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      1000
                                       Gwei
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                        </div>
                      </StyledComponent>
                    </Styled(styled.div)>
                  </div>
                </StyledComponent>
              </Styled(styled.div)>
            </div>
          </StyledComponent>
        </styled.div>
        <styled.div
          key="0x4"
        >
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-cSHVUG",
                  "isStatic": true,
                  "lastClassName": "fMLWXv",
                  "rules": Array [
                    "
                width: 100%;
                border-bottom: 1px solid #f0f0f0;
                &:last-child {
                  border: 0;
                }
              ",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-cSHVUG",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="sc-cSHVUG fMLWXv"
            >
              <Styled(styled.div)
                expanded={false}
                onClick={[Function]}
              >
                <StyledComponent
                  expanded={false}
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-kAzzGY",
                        "isStatic": false,
                        "lastClassName": "jTPYbN",
                        "rules": Array [
                          "
                      font-size: 1rem;
                      padding: 0.8rem 1rem;
                      border-bottom: 1px solid #f0f0f0;
                      transition: background-color 0.5s ease;
                      color: #444;
                      box-sizing: border-box;
                      background-color: #fff;
                    
                      &:last-child {
                        border: 0;
                      }
                    
                      &:hover {
                        background-color: ",
                          [Function],
                          ";
                        color: ",
                          [Function],
                          ";
                        cursor: ",
                          [Function],
                          ";
                      }
                    ",
                          "
                      padding: 0.8rem 1rem;
                      color: ",
                          [Function],
                          ";
                    
                      .dropdown-arrow {
                        height: 16px;
                        transition: transform 0.3s ease;
                        transform: rotateX(",
                          [Function],
                          "deg);
                      }
                      .expanded-view {
                        ",
                          [Function],
                          "
                        transition: height 0.3s ease, margin 0.3s ease;
                        height: ",
                          [Function],
                          ";
                        background-color: #fff;
                        color: #000;
                        margin: ",
                          [Function],
                          ";
                      }
                      &:hover {
                        cursor: pointer;
                        background-color: #fff;
                      }
                      &:hover .expanded-view {
                        cursor: auto;
                        background-color: #fff;
                        color: #000;
                      }
                    ",
                        ],
                      },
                      "displayName": "Styled(styled.div)",
                      "foldedComponentIds": Array [
                        "sc-jTzLTM",
                      ],
                      "render": [Function],
                      "styledComponentId": "sc-kAzzGY",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  onClick={[Function]}
                >
                  <div
                    className="sc-jTzLTM sc-kAzzGY jTPYbN"
                    onClick={[Function]}
                  >
                    <div>
                      <styled.div
                        className="header"
                      >
                        <StyledComponent
                          className="header"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-bdVaJa",
                                "isStatic": true,
                                "lastClassName": "gzrIrS",
                                "rules": Array [
                                  "
                              display: flex;
                              flex-direction: row;
                              box-sizing: border-box;
                              overflow: auto;
                            ",
                                ],
                              },
                              "displayName": "styled.div",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-bdVaJa",
                              "target": "div",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                        >
                          <div
                            className="header sc-bdVaJa gzrIrS"
                          >
                            <styled.div>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-ifAKCX",
                                      "isStatic": true,
                                      "lastClassName": "hHdAva",
                                      "rules": Array [
                                        "
                                    flex: auto 1 1;
                                  ",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-ifAKCX",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <div
                                  className="sc-ifAKCX hHdAva"
                                >
                                  0x4
                                </div>
                              </StyledComponent>
                            </styled.div>
                            <styled.div>
                              <StyledComponent
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-EHOje",
                                      "isStatic": true,
                                      "lastClassName": "eRufog",
                                      "rules": Array [
                                        "
                                    flex: auto 0 0;
                                  ",
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-EHOje",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                              >
                                <div
                                  className="sc-EHOje eRufog"
                                >
                                  <img
                                    className="dropdown-arrow"
                                  />
                                </div>
                              </StyledComponent>
                            </styled.div>
                          </div>
                        </StyledComponent>
                      </styled.div>
                    </div>
                    <Styled(styled.div)
                      className="expanded-view"
                      onClick={[Function]}
                    >
                      <StyledComponent
                        className="expanded-view"
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-fjdhpX",
                              "isStatic": true,
                              "lastClassName": "eXyvVf",
                              "rules": Array [
                                "
                            width: 100%;
                            border: 1px solid #f0f0f0;
                          ",
                                "
                            overflow-y: auto;
                            max-height: 140px;
                          ",
                              ],
                            },
                            "displayName": "Styled(styled.div)",
                            "foldedComponentIds": Array [
                              "sc-VigVT",
                            ],
                            "render": [Function],
                            "styledComponentId": "sc-fjdhpX",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        onClick={[Function]}
                      >
                        <div
                          className="sc-VigVT expanded-view sc-fjdhpX eXyvVf"
                          onClick={[Function]}
                        >
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Sender
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      0x6
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Receiver
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      0x5
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Ether sent
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      20
                                       Ether
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Gas Used
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      200
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                          <styled.div>
                            <StyledComponent
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-cSHVUG",
                                    "isStatic": true,
                                    "lastClassName": "fMLWXv",
                                    "rules": Array [
                                      "
                                  width: 100%;
                                  border-bottom: 1px solid #f0f0f0;
                                  &:last-child {
                                    border: 0;
                                  }
                                ",
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-cSHVUG",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                            >
                              <div
                                className="sc-cSHVUG fMLWXv"
                              >
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-htoDjs",
                                          "isStatic": true,
                                          "lastClassName": "eKbxVS",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 20%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-htoDjs",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-htoDjs eKbxVS"
                                    >
                                      Gas Price
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                                <Styled(styled.div)>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-iwsKbI",
                                          "isStatic": true,
                                          "lastClassName": "iWBUcV",
                                          "rules": Array [
                                            "
                                        padding: 0.8rem;
                                        display: inline-block;
                                        box-sizing: border-box;
                                      ",
                                            "
                                        width: 80%;
                                      ",
                                          ],
                                        },
                                        "displayName": "Styled(styled.div)",
                                        "foldedComponentIds": Array [
                                          "sc-gzVnrw",
                                        ],
                                        "render": [Function],
                                        "styledComponentId": "sc-iwsKbI",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gzVnrw sc-iwsKbI iWBUcV"
                                    >
                                      2000
                                       Gwei
                                    </div>
                                  </StyledComponent>
                                </Styled(styled.div)>
                              </div>
                            </StyledComponent>
                          </styled.div>
                        </div>
                      </StyledComponent>
                    </Styled(styled.div)>
                  </div>
                </StyledComponent>
              </Styled(styled.div)>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </Styled(styled.div)>
</TransactionsListView>
`;

exports[`matches <MyWallet transactions={[]}> snapshot 1`] = `
<TransactionsListView
  transactions={Array []}
>
  <Styled(styled.div)>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-jzJRlG",
            "isStatic": true,
            "lastClassName": "cZhRJb",
            "rules": Array [
              "
          width: 100%;
          border: 1px solid #f0f0f0;
        ",
              "
          overflow-y: auto;
          height: 100%;
        ",
            ],
          },
          "displayName": "Styled(styled.div)",
          "foldedComponentIds": Array [
            "sc-VigVT",
          ],
          "render": [Function],
          "styledComponentId": "sc-jzJRlG",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="sc-VigVT sc-jzJRlG cZhRJb"
      >
        <styled.div>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-cSHVUG",
                  "isStatic": true,
                  "lastClassName": "fMLWXv",
                  "rules": Array [
                    "
                width: 100%;
                border-bottom: 1px solid #f0f0f0;
                &:last-child {
                  border: 0;
                }
              ",
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-cSHVUG",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="sc-cSHVUG fMLWXv"
            >
              <Styled(styled.div)>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-kAzzGY",
                        "isStatic": false,
                        "lastClassName": "jTPYbN",
                        "rules": Array [
                          "
                      font-size: 1rem;
                      padding: 0.8rem 1rem;
                      border-bottom: 1px solid #f0f0f0;
                      transition: background-color 0.5s ease;
                      color: #444;
                      box-sizing: border-box;
                      background-color: #fff;
                    
                      &:last-child {
                        border: 0;
                      }
                    
                      &:hover {
                        background-color: ",
                          [Function],
                          ";
                        color: ",
                          [Function],
                          ";
                        cursor: ",
                          [Function],
                          ";
                      }
                    ",
                          "
                      padding: 0.8rem 1rem;
                      color: ",
                          [Function],
                          ";
                    
                      .dropdown-arrow {
                        height: 16px;
                        transition: transform 0.3s ease;
                        transform: rotateX(",
                          [Function],
                          "deg);
                      }
                      .expanded-view {
                        ",
                          [Function],
                          "
                        transition: height 0.3s ease, margin 0.3s ease;
                        height: ",
                          [Function],
                          ";
                        background-color: #fff;
                        color: #000;
                        margin: ",
                          [Function],
                          ";
                      }
                      &:hover {
                        cursor: pointer;
                        background-color: #fff;
                      }
                      &:hover .expanded-view {
                        cursor: auto;
                        background-color: #fff;
                        color: #000;
                      }
                    ",
                        ],
                      },
                      "displayName": "Styled(styled.div)",
                      "foldedComponentIds": Array [
                        "sc-jTzLTM",
                      ],
                      "render": [Function],
                      "styledComponentId": "sc-kAzzGY",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="sc-jTzLTM sc-kAzzGY jTPYbN"
                  >
                    There are no ether transactions
                  </div>
                </StyledComponent>
              </Styled(styled.div)>
            </div>
          </StyledComponent>
        </styled.div>
      </div>
    </StyledComponent>
  </Styled(styled.div)>
</TransactionsListView>
`;
